<resources>
    <string name="app_name">Деньги взайм</string>
    <string name="menu">Меню</string>
    <string name="loans">Микрозаймы</string>
    <string name="credit_cards">Кредитные карты</string>
    <string name="credits">Кредиты</string>
    <string name="privacy_policy">Политика конфиденциальности</string>
    <string name="news">Статьи</string>
    <string name="percent_in_day">ставка в день</string>
    <string name="in_card">На карту</string>
    <string name="on_few_min">За 5 мин</string>
    <string name="nal">Наличными</string>
    <string name="work_time">24/7</string>
    <string name="detail">Детальнее</string>
    <string name="submit">Оформить</string>
    <string name="info_of_credit">Оформили 32 564 клиентов за последние 30 дней. От 2 % на первый кредит.</string>
    <string name="bank_card">Банковские карты</string>
    <string name="policy">Требования к заёмщикам: \n\nГражданство Украины; \n\nВозраст от 18 лет; \n\nЛюбая кредитная история \n\nУсловия получения: \n\nПервый заём до 10 000 рублей выдается по ставке 0% в случае своевременного погашения; Период погашения займа от 61 до 365 дней; Процентная ставка по займам от 0 до 360% годовых. Например, если вы взяли займ на сумму 10 000 рублей на 1 год, то после истечения срока займа, вам необходимо будет выплатить: от 13 000 до 46 000 рублей. В случае нарушения сроков, размер неустойки составляет 0,10% от суммы просрочки в день, но не более 10% от суммы кредита; В случае длительной задержки выплаты информация будет передана в БКИ. Продление займа возможно при своевременном информировании кредитора (до наступления даты возврата займа) и уплаты процентов за первичный срок займа. Дополнительных комиссий за продление займа не предусмотрено \n\nПоследствия невыплаты займа: \n\nВ случае невозвращения в условленный срок суммы займа или суммы процентов за пользование заёмными средствами кредитор вынуждено начислит штраф за просрочку платежа. Большинство кредиторов идут на уступки и дают 3 дополнительных рабочих дня для оплаты. Они предусмотрены на случай, к примеру, если банковский перевод занял больше времени, чем обычно. Однако, в случае неполучения от Вас какой–либо реакции в течение продолжительного времени, будет начислен штраф за просрочку срока погашения размером в среднем 0,10% от первоначальной суммы для займов. При несоблюдении Вами условий по погашению займов, данные о Вас могут быть переданы в реестр должников или БКИ, что негативно может сказаться на Вашей кредитной истории и рейтинге кредитоспособности. Задолженность может быть передана коллекторскому агентству для взыскания займа. При допуске просрочки продление займа невозможно. О всех приближающихся сроках платежа кредитор своевременно информирует Вас по СМС или электронной почте. Рекомендуем Вам вносить платеж в день получения данных напоминаний. Погашая задолженность в срок, Вы формируете хорошую кредитную историю, что повышает Ваш рейтинг кредитоспособности и шансы в дальнейшем получить займ на более выгодных условиях. Предложение не является оффертой. Конечные условия уточняйте при прямом общении с кредиторами. \n\nИнформация о полной стоимости займа и пример расчета: \n\nЗайм в размере 10 000 рублей выдан на 61 дней с пролонгацией. В году 365 дней, по договору ставка составляет 1% в день (годовая ставка, соответственно будет равна 365%). Сумма процентов за год составляет 36 500 руб. (10 000*365% = 36 500), за 1 день 100 руб. (36 500/365 = 100), за 61 дней соответственно 6 100 руб. (100*61 = 6100). Общая сумма платежа составляет 16 100 руб. (10 000 руб. основной долг + 6 100 руб. проценты). \n\nПСЗ (полная стоимость займа) в процентах может составлять от 0% до 365% годовых. Минимальный и максимальный период погашения займа составляет от 5 дней, до 365 дней. Максимальная годовая процентная ставка, включающая ссудный процент, а также все остальные комиссии и расходы за год, или аналогичная ставка, рассчитанная соответственно местному законодательству составляет 420% годовых. Взыскание долгов осуществляется посредством телефонных звонков, уведомлений по SMS и электронной почте, как Заемщика, так и контактного лица. Минимальный и максимальный период погашения займа составляет от 5 дней, до 365 дней. В случае просрочки по выплатам, со следующего дня после истечения срока займа, Вам будет ежедневно начисляться пеня в размере 0,05 – 1% в день от суммы кредита. Также будет продолжаться ежедневное начисление процентов за пользование займом по договору и возможно начисление фиксированной комиссии. \n\nПеречень лицензий представленных выше МФО: \n\nЛицензия еКапуста - №2120754001243 от 22.03.2012г. \nЛицензия Займер - №651303532004088 от 11.10.2013 \n\ицензия Турбозайм - №651303045003951 от 29.08.2013 \nЛицензия Vivus №3120177002032 от 30.08.2012 \nЛицензия Лайм-Займ - №651303045004102 от 17.10.2013 \nЛицензия MoneyMan - №2110177000478 от 25.10.2011 \nЛицензия Moneza - №001603045007582 от 09.03.2016 \nЛицензия pay p.s. - №2120177001838 от 24.07.2012 \nЛицензия Platiza - №651203045001237 от 15.03.2012 \nЛицензия Konga - №001603550007495 от 15.02.2016 \nЛицензия Ezaem - №651303045003161 от 14.05.2013 \nЛицензия Joymoney - №651403550005450 от 28.07.2014 \nЛицензия Веб-займ - №2110827000326 от 05.08.2011 \nЛицензия SmartCredit - №651503045006429 от 07.05.2015 \nЛицензия Честное слово - №651303045002916 от 26.03.2013 \nЛицензия ONLINE-ZAIM - №2120177001838 от 24.07.2012\nЛицензия Кредито24 - №651303552003006 от 09.04.2013 \nЛицензия ГлавФинанс - №2120323001658 от 19.06.2012 \nЛицензия Микроклад - №651403140005711 от 30.09.2014 \nЛицензия Деньги сразу - №1703020008232 от 27.04.2017 \nЛицензия СМСФинанс - №2120177002022 от 30.08.2012 \nЛицензия До зарплаты - №651403140005467 от 04.08.2014 \nЛицензия Центр займов - №2110177000192 от 08.07.2011 \nЛицензия Быстроденьги - №2110573000002 от 08.07.2011 \nДанный ресурс не является финансовым учреждением, банком или кредитором, и не несёт ответственности за любые заключенные договоры или условия. Все материалы, размещенные на сайте имееют информационный характер. Условия выдачи займов (кредитов) уточняйте на сайте МФО или банка. Данный ресурс является агрегатором финансовых инструментов и не требует наличия лицензии для ведения такой деятельности.</string>
    <string name="zaem">Займы</string>
</resources>