<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="204dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="24dp"
        android:backgroundTint="@color/background_black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/imageCreditContainer"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="45dp"
                app:cardPreventCornerOverlap="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageCredit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/creditName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="sans-serif-medium"
                android:lineSpacingExtra="2dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/imageCreditContainer"
                app:layout_constraintStart_toEndOf="@id/imageCreditContainer"
                app:layout_constraintTop_toTopOf="@id/imageCreditContainer"
                tools:text="Credit" />

            <ImageView
                android:id="@+id/iconStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_star"
                app:layout_constraintBottom_toTopOf="@id/ratingText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/creditName" />

            <TextView
                android:id="@+id/ratingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="8sp"
                android:text="4.8"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/creditName"
                app:layout_constraintEnd_toEndOf="@id/iconStar"
                app:layout_constraintStart_toStartOf="@id/iconStar"
                app:layout_constraintTop_toBottomOf="@id/iconStar" />

            <View
                android:id="@+id/line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="#3F3F3F"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageCreditContainer" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.35" />

            <TextView
                android:id="@+id/limitText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:fontFamily="sans-serif-medium"
                android:lineSpacingExtra="8sp"
                android:text="on 20.000 rub."
                android:textColor="@color/white"
                android:textSize="12sp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line" />

            <TextView
                android:id="@+id/percentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2$"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"
                android:lineSpacingExtra="8sp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/line"
                app:layout_constraintStart_toStartOf="@id/guideline" />

            <TextView
                android:id="@+id/timeLimit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="на 7-30 дней"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:alpha="0.7"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/limitText" />

            <TextView
                android:id="@+id/percentInDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:alpha="0.7"
                android:text="@string/percent_in_day"
                android:fontFamily="sans-serif-medium"
                android:lineSpacingExtra="8sp"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/percentText"
                app:layout_constraintStart_toStartOf="@id/guideline" />

            <ImageView
                android:id="@+id/iconDoneCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_done"
                app:layout_constraintTop_toTopOf="@id/iconCircleCard"
                app:layout_constraintBottom_toBottomOf="@id/iconCircleCard"
                app:layout_constraintStart_toStartOf="@id/iconCircleCard"
                app:layout_constraintEnd_toEndOf="@id/iconCircleCard" />

            <ImageView
                android:id="@+id/iconCircleCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_circle"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/timeLimit"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/onCardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_card"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="8sp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@id/iconCircleCard"
                app:layout_constraintBottom_toBottomOf="@id/iconCircleCard"
                app:layout_constraintStart_toEndOf="@id/iconCircleCard" />

            <ImageView
                android:id="@+id/iconDoneTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_done"
                app:layout_constraintTop_toTopOf="@id/iconCircleTime"
                app:layout_constraintBottom_toBottomOf="@id/iconCircleTime"
                app:layout_constraintStart_toStartOf="@id/iconCircleTime"
                app:layout_constraintEnd_toEndOf="@id/iconCircleTime" />

            <ImageView
                android:id="@+id/iconCircleTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_circle"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/iconCircleCard"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/onTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on_few_min"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="8sp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@id/iconCircleTime"
                app:layout_constraintBottom_toBottomOf="@id/iconCircleTime"
                app:layout_constraintStart_toEndOf="@id/iconCircleTime" />


            <ImageView
                android:id="@+id/iconDoneNal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_done"
                app:layout_constraintTop_toTopOf="@id/iconCircleNal"
                app:layout_constraintBottom_toBottomOf="@id/iconCircleNal"
                app:layout_constraintStart_toStartOf="@id/iconCircleNal"
                app:layout_constraintEnd_toEndOf="@id/iconCircleNal" />

            <ImageView
                android:id="@+id/iconCircleNal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_circle"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/percentInDay"
                app:layout_constraintStart_toStartOf="@id/guideline" />

            <TextView
                android:id="@+id/onNalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nal"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="8sp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@id/iconCircleNal"
                app:layout_constraintBottom_toBottomOf="@id/iconCircleNal"
                app:layout_constraintStart_toEndOf="@id/iconCircleNal" />


            <ImageView
                android:id="@+id/iconDoneWorkTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_done"
                app:layout_constraintTop_toTopOf="@id/iconCircleWorkTime"
                app:layout_constraintBottom_toBottomOf="@id/iconCircleWorkTime"
                app:layout_constraintStart_toStartOf="@id/iconCircleWorkTime"
                app:layout_constraintEnd_toEndOf="@id/iconCircleWorkTime" />

            <ImageView
                android:id="@+id/iconCircleWorkTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_circle"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/iconCircleNal"
                app:layout_constraintStart_toStartOf="@id/guideline" />

            <TextView
                android:id="@+id/onWorkTimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work_time"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:fontFamily="sans-serif"
                android:lineSpacingExtra="8sp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@id/iconCircleWorkTime"
                app:layout_constraintBottom_toBottomOf="@id/iconCircleWorkTime"
                app:layout_constraintStart_toEndOf="@id/iconCircleWorkTime" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/detailButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:text="@string/detail"
                style="@style/StrokeButton"
                app:layout_constraintTop_toTopOf="@id/line"
                app:layout_constraintEnd_toEndOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/submit"
                style="@style/MyButton"
                app:layout_constraintTop_toBottomOf="@id/detailButton"
                app:layout_constraintStart_toStartOf="@id/detailButton"
                app:layout_constraintEnd_toEndOf="@id/detailButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>